fix: use trim().isEmpty() instead of isBlank() for Java 8 compat